      really stupid idea because the code (like ok,error-lostCommunication or
      whatever is valid there) was interpreted as non existing HTML code.
    - Some corrections in output for multipath/paths.
    - Bugfix. Due to a wrong placed curly bracked the output was doubled. Fixed.
  - host_runtime_info()
    - Small bugfix. It may happen within the heath check that some values are not set
      by VMware/hardware. In this case we have an
      "[Use of uninitialized value in concatenation (.) or string ..."
      To avoid this we check the values of the hash with each loop an in case a value
      is not set we replace it whit the string "Unknown".

- 24 Aug 2014 M.Fuerstenau version 0.9.20
  - datastore_volumes_info(). Some improvements.
    - Output. Because it was hard to see an alerting volume within the mass of others
      the output is now grouped so that all alerting volumes are listed on top with 
      a leading comment. Second are the volumes with no errors. Theses volumes are
      seperated by a line and also introduced by a comment.
    - New commandline switch --spaceleft.  When checking multiple volumes the threshold
      must be given in either percent (old) OR space left on device.(New)

- 28 Aug 2014 M.Fuerstenau version 0.9.20a
  - datastore_volumes_info().
    - Fixed some small bugs in output.

- 7 Oct 2014 M.Fuerstenau version 0.9.21
  - host_runtime_info()
    - If the CIM server is not running (or not running correctly) the health
      check receives a lot of unknown events even in the case the hardware
      status from the GUI looks ok. So we check for the first CPU. If it is
      unknown be sure the CIM server has to be restarted. After this you will
      notice a difference in the GUI too.
  - host_net_info()
    - In case of an unplugged/disconnected NIC the state is now warning
      instead of critical because an unplugged card is not always a critical
      situtation but the admin should take notice of that.