@@ -1109,3 +1109,11 @@ History:
     - In case of an unplugged/disconnected NIC the state is now warning
       instead of critical because an unplugged card is not always a critical
       situtation but the admin should take notice of that.
+
+- 16 Dec 2014 M.Fuerstenau version 0.9.22
+  - Around line 1680:
+    - The previous check for an valid session was done with a string compare. This method
+      was taken from the VMware website. But it didn't work correctly. In $@ you will find
+      after an eval the error message in case of an error or nothing when it was successfull.
+      The problem was the string compare. If another language as English was choosen this
+      didn't work. So now it's only checked whether $@ has a content (error) or is empty (success).
